# costa

./: .gitignore  README.md  init.sh  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.less  main.tsx  router.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  constant.rs  file.rs  main.rs  path.rs  sotre.rs  tick.rs
src-tauri/src/command/: handler.rs  mod.rs  util.rs  webview_command.rs
src-tauri/src/host/: host.rs  mod.rs  scanner.rs
src-tauri/src/simulator/: app_command.rs  command.rs  device.rs  mod.rs  runtime.rs
src-tauri/src/tray/: event.rs  menu.rs  mod.rs  operation.rs  tray.rs
src-tauri/src/window/: costa_router.rs  costa_window.rs  mod.rs
src/pages/: env_editor.tsx  schema_editor.tsx
src/pages/app_config/: index.tsx  types.ts
src/pages/app_config/components/: app_installer.tsx  sim_installer.tsx
